Small updates to config files

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,11 +3,23 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# start with window 1
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# shorten command delay
+set -sg escape-time 1
+
+# mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
 
 # DESIGN TWEAKS
 
@@ -18,10 +30,8 @@ set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
-# clock mode
+#  modes
 setw -g clock-mode-colour yellow
-
-# copy mode
 setw -g mode-style 'fg=black bg=red bold'
 
 # panes
@@ -33,20 +43,21 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style 'fg=red'
 
-set -g status-left ''
+set -g status-left '#{?client_prefix,#[fg=green],#[fg=red]} '
 set -g status-left-length 10
 
+
 set -g status-right-style 'fg=black bg=yellow'
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
+set -g status-right '#[bg=terminal fg=yellow]#[bg=yellow fg=black]%Y-%m-%d %H:%M#[bg=terminal fg=yellow]#[bg=yellow fg=black]'
 
-setw -g window-status-current-style 'fg=black bg=red'
-setw -g window-status-current-format ' #I #W #F '
+setw -g window-status-current-style 'fg=black bg=red bold'
+setw -g window-status-current-format '#[bg=terminal fg=red]#[bg=red fg=black]#I #W #F#[bg=terminal fg=red]#[bg=red fg=black]'
 
-setw -g window-status-style 'fg=red bg=black'
+setw -g window-status-style 'fg=red'
+setw -g window-status-separator '
 setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
 
 setw -g window-status-bell-style 'fg=yellow bg=red bold'
 
 # messages
-set -g message-style 'fg=yellow bg=red bold'
+set -g message-style 'fg=yellow bg=terminal bold'
