Fixed incorret colors in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,7 +21,19 @@ set -sg escape-time 1
 # mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+# reload config file
+bind r source-file ~/.tmux.conf
+
+# open new windows in the current path
+bind c new-window -c "#{pane_current_path}"
+
+# set default terminal mode to 256 colors
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+#-----------------------------------------------------
 # DESIGN TWEAKS
+#-----------------------------------------------------
 
 # don't do anything when a 'bell' rings
 set -g visual-activity off
@@ -54,7 +66,7 @@ setw -g window-status-current-style 'fg=black bg=red bold'
 setw -g window-status-current-format '#[bg=terminal fg=red]#[bg=red fg=black]#I #W #F#[bg=terminal fg=red]#[bg=red fg=black]'
 
 setw -g window-status-style 'fg=red'
-setw -g window-status-separator '
+setw -g window-status-separator ''
 setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
 
 setw -g window-status-bell-style 'fg=yellow bg=red bold'
