--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,6 +27,13 @@ bind r source-file ~/.tmux.conf
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
 
+# Vim like navigation
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # set default terminal mode to 256 colors
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
