Updated the general color scheme from Tokyo Night to Catppuccin

--- a/alacritty/.alacritty.toml
+++ b/alacritty/.alacritty.toml
@@ -20,4 +20,4 @@ y = 5
 [general]
 
 live_config_reload = true
-import = ["colors/tokyonight_storm.toml"]
+import = ["colors/catppuccin-mocha.toml"]
