--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,34 +49,31 @@ set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
-#  modes
-setw -g clock-mode-colour yellow
-setw -g mode-style 'fg=black bg=red bold'
 
-# panes
-set -g pane-border-style 'fg=red'
-set -g pane-active-border-style 'fg=yellow'
+#Configure catppuccin
+set -g @catppuccin_flavor 'mocha'
 
-# statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'fg=red'
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_default_text ' #W'
+set -g @catppuccin_window_text ' #W'
+set -g @catppuccin_window_current_text ' #W'
 
-set -g status-left '#{?client_prefix,#[fg=green],#[fg=red]} '
-set -g status-left-length 10
+set -g @catppuccin_date_time_text " %H:%M %d/%m"
 
+# Enable catppuccin added using (replace v.2.1.3 with correct version)
+# mkdir -p ~/.config/tmux/plugins/catppuccin
+# git clone -b v2.1.3 https://github.com/catppuccin/tmux.git ~/.config/tmux/plugins/catppuccin/tmux
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
-set -g status-right-style 'fg=black bg=yellow'
-set -g status-right '#[bg=terminal fg=yellow]#[bg=yellow fg=black]%Y-%m-%d %H:%M#[bg=terminal fg=yellow]#[bg=yellow fg=black]'
+#Remove background from status
+set -g status-style "bg=terminal"
 
-setw -g window-status-current-style 'fg=black bg=red bold'
-setw -g window-status-current-format '#[bg=terminal fg=red]#[bg=red fg=black]#I #W #F#[bg=terminal fg=red]#[bg=red fg=black]'
-
-setw -g window-status-style 'fg=red'
-setw -g window-status-separator ''
-setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
-
-setw -g window-status-bell-style 'fg=yellow bg=red bold'
-
-# messages
-set -g message-style 'fg=yellow bg=terminal bold'
+# Statusbar
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -gF  status-right "#{@catppuccin_status_directory}"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
