--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -6,10 +6,11 @@ conky.config = {
     own_window = true,
     own_window_transparent = false,
     own_window_argb_visual = true,
-    own_window_argb_value = 175,
+    own_window_argb_value = 243,
     own_window_type = 'normal',
     own_window_class = 'conky-semi',
     own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+    own_window_colour = '1E1E2E',
     background = false,
     double_buffer = true,
     imlib_cache_size = 0,
@@ -36,7 +37,7 @@ conky.config = {
     font = 'Liberation Mono:size=10',
     default_color = 'EEEEEE',
     color1 = 'AABBFF',
-    color2 = 'B35BE3'; #'FF993D',
+    color2 = 'CBA6F7'; #'FF993D',
     color3 = 'AAAAAA',
  
     -- layouting
