--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -1,108 +1,110 @@
 conky.config = {
-    use_xft = true,
-    xftalpha = 0.8,
-    update_interval = 1.0,
-    total_run_times = 0,
-    own_window = true,
-    own_window_transparent = false,
-    own_window_argb_visual = true,
-    own_window_argb_value = 243,
-    own_window_type = 'normal',
-    own_window_class = 'conky-semi',
-    own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
-    own_window_colour = '1E1E2E',
-    background = false,
-    double_buffer = true,
-    imlib_cache_size = 0,
-    no_buffers = true,
-    uppercase = false,
-    cpu_avg_samples = 2,
-    override_utf8_locale = true,
- 
-    -- placement
-    alignment = 'top_right',
-    gap_x = 0,
-    gap_y = 0,
- 
-    -- default drawing
-    draw_shades = false,
-    draw_outline = false,
-    draw_borders = false,
-    draw_graph_borders = true,
-    default_bar_width = 150, default_bar_height = 5,
-    default_graph_width = 150, default_graph_height = 12,
-    default_gauge_width = 20, default_gauge_height = 20,
- 
-    -- colors
-    font = 'Liberation Mono:size=10',
-    default_color = 'EEEEEE',
-    color1 = 'AABBFF',
-    color2 = 'CBA6F7'; #'FF993D',
-    color3 = 'AAAAAA',
- 
-    -- layouting
-    template0 = [[${font Liberation Sans:bold:size=11}${color2}\1 ${color3}${hr 2}${font}]],
-    template1 = [[${color1}\1]],
-    template2 = [[${goto 100}${color}]],
-    template3 = [[${goto 180}${color}${alignr}]],
-};
- 
-conky.text = [[
-${template0 Info}
-${template1 Date}                                                           ${template3}${color3}${time %a,}${color}${time %e %B %G}
-${template1 Time}                                                           ${template3}${time %T}
- 
-${template0 System}
-${template1 Hostname}                                                       ${template3}${nodename}
-${template1 ${sysname}}                                                     ${template3}${kernel}-${machine}
-${template1 Uptime}                                                         ${template3}${uptime_short}
-${template1 CPU}                                                            ${template3}${freq_g}GHz
-#${template1 CPU\ Temperature}                                               ${template3}${acpitemp}°C
- 
-${template0 Processors}
-${template1 Load}               ${template2}${loadavg 1}                    ${template3}${loadgraph}
-${template1 Core\ 1}            ${template2}${cpu cpu1}%                    ${template3}${cpubar cpu1}
-${template1 Core\ 2}            ${template2}${cpu cpu2}%                    ${template3}${cpubar cpu2}
-${template1 Core\ 3}            ${template2}${cpu cpu3}%                    ${template3}${cpubar cpu3}
-${template1 Core\ 4}            ${template2}${cpu cpu4}%                    ${template3}${cpubar cpu4}
-${template1 Core\ 5}            ${template2}${cpu cpu5}%                    ${template3}${cpubar cpu5}
-${template1 Core\ 6}            ${template2}${cpu cpu6}%                    ${template3}${cpubar cpu6}
-${template1 Core\ 7}            ${template2}${cpu cpu7}%                    ${template3}${cpubar cpu7}
-${template1 Core\ 8}            ${template2}${cpu cpu8}%                    ${template3}${cpubar cpu8}
-${template1 Top}                ${template2}${top name 1}                   ${template3}${top cpu 1}
-                                ${template2}${top name 2}                   ${template3}${top cpu 2}
-                                ${template2}${top name 3}                   ${template3}${top cpu 3}
- 
-${template0 Memory}
-${template1 Memory}             ${template2}${memperc}% used                ${template3}${mem} / ${memmax}
-                                                                            ${template3}${membar}
-${template1 Top}                ${template2}${top_mem name 1}               ${template3}${top_mem mem 1}
-                                ${template2}${top_mem name 2}               ${template3}${top_mem mem 2}
-                                ${template2}${top_mem name 3}               ${template3}${top_mem mem 3}
 
-${template0 Filesystem}
-${template1 /}                  ${template2}${fs_free /} free               ${template3}${fs_used /} / ${fs_size /}
-                                                                            ${template3}${fs_bar /}
-${template1 /home}              ${template2}${fs_free /home} free           ${template3}${fs_used /home} / ${fs_size /home}
-                                                                            ${template3}${fs_bar /home}
-${template1 IO\ Read}           ${template2}${diskio_read}                  ${template3}${diskiograph_read}
-${template1 IO\ Write}          ${template2}$diskio_write                   ${template3}$diskiograph_write
-${template1 Top}                ${template2}${top_io name 1}                ${template3}${top_io io_perc 1}%
- 
-#${template0 Networking}
-${if_existing /proc/net/route wlan0}\
-${template1 IP}                                                             ${template3}${addr wlan0}
-${template1 AP}                                                             ${template3}${wireless_essid wlan0}
-${template1 Signal}             ${template2}${wireless_link_qual_perc wlan0} ${template3}${wireless_link_bar wlan0}
-${template1 Download}           ${template2}${downspeed wlan0}              ${template3}${downspeedgraph wlan0}
-${template1 Upload}             ${template2}${upspeed wlan0}                ${template3}${upspeedgraph wlan0}
-${template1 Total Down/Up}                                                  ${template3}${totaldown wlan0}↓ / {totalup wlan0}↑
-${else}${if_existing /proc/net/route eth0}\
-${template1 Ip}                                                             ${template3}${addr eth0}
-${template1 Download}           ${template2}${downspeed eth0}               ${template3}${downspeedgraph eth0}
-${template1 Upload}             ${template2}${upspeed eth0}                 ${template3}${upspeedgraph eth0}
-${template1 Total Down/Up}                                                  ${template3}${totaldown eth0}↓ / ${totalup eth0}↑
-${endif}${endif}\
- 
- 
+	--Various settings
+	background = true, 							-- forked to background
+	cpu_avg_samples = 2,						-- The number of samples to average for CPU monitoring.
+	diskio_avg_samples = 10,					-- The number of samples to average for disk I/O monitoring.
+	double_buffer = true,						-- Use the Xdbe extension? (eliminates flicker)
+	if_up_strictness = 'address',				-- how strict if testing interface is up - up, link or address
+	net_avg_samples = 2,						-- The number of samples to average for net data
+	no_buffers = true,							-- Subtract (file system) buffers from used memory?
+	temperature_unit = 'celsius',			-- fahrenheit or celsius
+	text_buffer_size = 2048,					-- size of buffer for display of content of large variables - default 256
+	update_interval = 1,						-- update interval
+	imlib_cache_size = 0,           -- disable image cache to get a new spotify cover per song
+
+	-- Placement (Conky on MIDDLE of THREE monitors at 1920x1080)
+	--alignment = 'top_left',		                -- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+	--gap_x = 3540,                               -- pixels between right or left border
+	--gap_y = 70,									-- pixels between bottom or left border
+
+    -- Placement (For SINGLE monitor users!)
+	alignment = 'top_right',		            -- top_left,top_middle,top_right,bottom_left,bottom_middle,bottom_right,
+	gap_x = 50,								-- pixels between right or left border
+	gap_y = 70,								-- pixels between bottom or left border
+
+    -- Size
+  minimum_height = 200,						-- minimum height of window
+	minimum_width = 260,						-- minimum width of window
+	maximum_width = 260,						-- maximum width of window
+
+	--Graphical
+	border_inner_margin = 5, 					-- margin between border and text
+	border_outer_margin = 5, 					-- margin between border and edge of window
+	border_width = 0, 							-- border width in pixels
+	default_bar_width = 260,					-- default is 0 - full width
+	default_bar_height = 10,					-- default is 6
+	default_gauge_height = 25,					-- default is 25
+	default_gauge_width =40,					-- default is 40
+	default_graph_height = 40,					-- default is 25
+	default_graph_width = 153,					-- default is 0 - full width
+	default_shade_color = '#000000',			-- default shading colour
+	default_outline_color = '#000000',			-- default outline colour
+	draw_borders = false,						-- draw borders around text
+	draw_graph_borders = true,					-- draw borders around graphs
+	draw_shades = false,						-- draw shades
+	draw_outline = false,						-- draw outline
+	stippled_borders = 0,						-- dashing the border
+
+	--Textual
+	format_human_readable = true,				-- KiB, MiB rather then number of bytes
+	font  = 'JetBrains Mono:bold:size=10',  	-- the default font used
+	font2 = 'Raleway:bold:size=30',         	-- font for the time
+	font3 = 'Ubuntu:size=14',               	-- font for the date
+	font4 = 'Raleway:bold:size=9',              -- font for the keybindings heading
+	max_text_width = 0,							-- 0 will make sure line does not get broken if width too smal
+	max_user_text = 16384,						-- max text in conky default 16384
+	override_utf8_locale = true,				-- force UTF8 requires xft
+	short_units = true,							-- shorten units from KiB to k
+	top_name_width = 21,						-- width for $top name value default 15
+	top_name_verbose = false,					-- If true, top name shows the full command line of  each  process - Default value is false.
+	uppercase = false,							-- uppercase or not
+	use_spacer = 'none',						-- adds spaces around certain objects to align - default none
+	use_xft = true,								-- xft font - anti-aliased font
+	xftalpha = 1,								-- alpha of the xft font - between 0-1
+
+	--Windows
+	own_window = true,							-- create your own window to draw
+	own_window_argb_value = 243,			    -- real transparency - composite manager required 0-255
+	own_window_argb_visual = true,				-- use ARGB - composite manager required
+	own_window_class = 'Conky',					-- manually set the WM_CLASS name for use with xprop
+	own_window_colour = '#1e1e2e',				-- set colour if own_window_transparent no
+	own_window_transparent = false,				-- if own_window_argb_visual is true sets background opacity 0%
+	own_window_title = 'conky',			        -- set the name manually
+	own_window_type = 'desktop',				-- if own_window true options are: normal/override/dock/desktop/panel
+	own_window_hints = 'undecorated,below,above,sticky,skip_taskbar,skip_pager',  -- if own_window true - just hints - own_window_type sets it
+
+	--catppuccin
+	color0 = '#C9CBFF',
+	color1 = '#D9E0EE',
+	color2 = '#89DCEB',
+	color3 = '#F2CDCD',
+	color4 = '#C3BAC6',
+    color5 = '#ABE9B3',
+    color6 = '#FAE3B0',
+};
+
+conky.text = [[
+${alignc}${color0}${font2}${DESKTOP_SESSION}${font}
+${voffset 6}${alignc}${color0}${font3}${time %b %d, %Y}${font}${color}
+${voffset 18}${goto 12}${color5}CPU${goto 50}
+${goto 12}$cpu%
+${color2}${goto 12}${cpubar 8,254}
+${voffset 5}${goto 12}$font${color1}${top name 1}$alignr$color${top cpu 1}%
+${goto 12}${color1}${top name 2}$alignr$color${top cpu 2}%
+${goto 12}${color1}${top name 3}$alignr$color${top cpu 3}%
+${voffset 14}${goto 12}${color6}RAM${goto 50}
+${goto 12}$mem/$memmax
+${color2}${goto 12}${membar 8,254}${color}
+${goto 12}${voffset 5}${color1}${top_mem name 1}$alignr$color${top_mem mem_res 1}
+${goto 12}${color1}${top_mem name 2}$alignr$color${top_mem mem_res 2}
+${goto 12}${color1}${top_mem name 3}$alignr$color${top_mem mem_res 3}
+${goto 12}${voffset 14}${color3}${font}File System 
+${goto 12}/
+${goto 12}${color3}${fs_used /}/${fs_size /} 
+${goto 12}${color2}${fs_bar 8,254}
+${goto 12}${color3}/home
+${goto 12}${color3}${fs_used /home}/${fs_size /home} 
+${goto 12}${color2}${fs_bar 8,254}
 ]];
+
