A number of smaller fixes

--- a/conky/.config/conky/conky.conf
+++ b/conky/.config/conky/conky.conf
@@ -71,7 +71,7 @@ conky.config = {
 	own_window_colour = '#1e1e2e',				-- set colour if own_window_transparent no
 	own_window_transparent = false,				-- if own_window_argb_visual is true sets background opacity 0%
 	own_window_title = 'conky',			        -- set the name manually
-	own_window_type = 'desktop',				-- if own_window true options are: normal/override/dock/desktop/panel
+	own_window_type = 'normal',				-- if own_window true options are: normal/override/dock/desktop/panel
 	own_window_hints = 'undecorated,below,above,sticky,skip_taskbar,skip_pager',  -- if own_window true - just hints - own_window_type sets it
 
 	--catppuccin
@@ -102,9 +102,9 @@ ${goto 12}${color1}${top_mem name 3}$alignr$color${top_mem mem_res 3}
 ${goto 12}${voffset 14}${color3}${font}File System 
 ${goto 12}/
 ${goto 12}${color3}${fs_used /}/${fs_size /} 
-${goto 12}${color2}${fs_bar 8,254}
+${goto 12}${color2}${fs_bar 8,254 /}
 ${goto 12}${color3}/home
 ${goto 12}${color3}${fs_used /home}/${fs_size /home} 
-${goto 12}${color2}${fs_bar 8,254}
+${goto 12}${color2}${fs_bar 8,254 /home}
 ]];
 
