--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,24 +13,24 @@ font_size 12.0
 enable_audio_bell no
 
 #: Hide the window decorations
-hide_window_decorations yes
+hide_window_decorations no
 
 #Layout 
 enabled_layouts splits:split_axis=horizontal
 
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed one above the other
-map ctrl+- launch --location=hsplit
+map alt+- launch --location=hsplit
 
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed side by side
-map ctrl+| launch --location=vsplit
+map alt+| launch --location=vsplit
 
 # Switch focus to the neighboring window in the indicated direction
-map ctrl+h neighboring_window left
-map ctrl+l neighboring_window right
-map ctrl+k neighboring_window up
-map ctrl+j neighboring_window down
+map alt+h neighboring_window left
+map alt+l neighboring_window right
+map alt+k neighboring_window up
+map alt+j neighboring_window down
 
 #: Scrolling 
 
