Small update to the header are of conky

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -86,7 +86,8 @@ conky.config = {
 
 conky.text = [[
 ${alignc}${color0}${font2}${DESKTOP_SESSION}${font}
-${voffset 6}${alignc}${color0}${font3}${time %b %d, %Y}${font}${color}
+${voffset 6}${alignc}${color0}${font3}${time %H : %M}${font}
+${voffset 6}${alignc}${color0}${font3}${time %d %b, %Y}${font}${color}
 ${voffset 18}${goto 12}${color5}CPU${goto 50}
 ${goto 12}$cpu%
 ${color2}${goto 12}${cpubar 8,254}
