--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -19,7 +19,7 @@ music_directory		"~/Music"
 # format. This setting defaults to playlist saving being disabled.
 #
 #playlist_directory		"$XDG_CONFIG_HOME/mpd/playlists"
-#playlist_directory		"~/.mpd/playlists"
+playlist_directory		"~/.mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -28,7 +28,7 @@ music_directory		"~/Music"
 # files over an accepted protocol.
 #
 #db_file			"$XDG_CACHE_HOME/mpd/database"
-#db_file			"~/.mpd/database"
+db_file			"~/.mpd/database"
 
 # These settings are the locations for the daemon log files for the daemon.
 #
@@ -48,7 +48,7 @@ music_directory		"~/Music"
 # If you use systemd, do not configure a pid_file.
 #
 #pid_file			"$XDG_RUNTIME_DIR/mpd/mpd.pid"
-#pid_file			"~/.mpd/pid"
+pid_file			"~/.mpd/pid"
 
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
