--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ monitor=eDP-1, 1920x1080@60, 0x0, 1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = yazi
 $menu = wofi --show drun
 
 
@@ -48,8 +48,8 @@ $menu = wofi --show drun
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,16
+env = HYPRCURSOR_SIZE,16
 
 
 ###################
@@ -177,7 +177,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -199,7 +199,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
