Changed file explorer for hyperland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ monitor=eDP-1, 1920x1080@60, 0x0, 1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = yazi
+$fileManager = kitty yazi
 $menu = wofi --show drun
 
 
@@ -40,6 +40,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = waybar
 
 
 #############################
