--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,7 +27,8 @@ monitor=eDP-1, 1920x1080@60, 0x0, 1
 # Set programs that you use
 $terminal = kitty
 $fileManager = kitty yazi
-$menu = wofi --show drun
+$menu = fuzzel
+$browser = firefox
 
 
 #################
@@ -41,6 +42,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
+exec-once = waypaper --restore
 
 
 #############################
@@ -49,8 +51,8 @@ exec-once = waybar
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,16
-env = HYPRCURSOR_SIZE,16
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
 
 
 ###################
@@ -178,8 +180,8 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -228,9 +230,15 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bindr = SUPER, SUPER_L, exec, pkill fuzzel || fuzzel
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Y, togglesplit, # dwindle
+bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, W, exec, waypaper
+
+bind = CTRL ALT, BACKSPACE, exec, wlogout
+
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + vim movement
 bind = $mainMod, H, movefocus, l
