--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -9,23 +9,20 @@
   "modules-left": [
     "cpu",
     "memory",
-    "niri/workspaces"
+    "hyprland/workspaces"
   ],
   "modules-center": [
-    "mpd",
-    "cava"
+    "clock"
   ],
   "modules-right": [
     "tray",
-    "niri/language",
+    "hyprland/language",
     "network",
     "wireplumber",
-    // "backlight",
     "battery",
-    "clock"
   ],
   // Modules
-  "niri/workspaces": {
+  "hyprland/workspaces": {
     "all-outputs": false,
     "disable-click": false,
     "format": "{icon}",
@@ -90,8 +87,8 @@
     "on-click": "kitty btop"
   },
   "clock": {
-    "format": "󱑏  {:%I:%M %p}",
-    "format-alt": "󰙹 {:%A, %B %d, %Y (%R)}",
+    // "format": "󱑏  {:%I:%M %p}",
+    "format": "󰙹 {:%B %d %R}",
     "tooltip-format": "{calendar}",
     "calendar": {
       "mode": "year",
@@ -108,10 +105,6 @@
     },
     "actions": {
       "on-click-right": "mode",
-      "on-scroll-up": "tz_up",
-      "on-scroll-down": "tz_down",
-      "on-scroll-up": "shift_up",
-      "on-scroll-down": "shift_down"
     }
   },
   "cava": {
@@ -146,7 +139,7 @@
       "on-click-right": "mode"
     }
   },
-  "niri/language": {
+  "hyprland/language": {
     "format": "{short}"
   },
   "tray": {
