--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,11 +1,11 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "type": "auto",
-    "source": "~/.config/fastfetch/endevouros.png",
-    "height": 14,
+    "type": "builtin",
+    // "source": "~/.config/fastfetch/nix.png",
+    "height": 10,
     "padding": {
-      "top": 1
+      "top": 0
     }
   },
   "display": {
@@ -23,6 +23,9 @@
     }
   },
   "modules": [
+    "break",
+    "break",
+    "break",
     {
       "type": "custom",
       "format": "┌{$1} {#1}System Information{#} {$1}┐"
