--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ font_size 12.0
 enable_audio_bell no
 
 #: Hide the window decorations
-hide_window_decorations no
+hide_window_decorations yes
 
 #Layout 
 enabled_layouts splits:split_axis=horizontal
