--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=eDP-1, 1920x1080@60, 0x0, 1
 $terminal = kitty
 $fileManager = kitty yazi
 $menu = fuzzel
-$browser = firefox
+$browser = librewolf
 
 
 #################
