Updated kitty to use gruvbox

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -49,7 +49,7 @@ map kitty_mod+l next_tab
 map kitty_mod+h previous_tab
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Gruvbox Dark Soft
 include current-theme.conf
 background_opacity 0.95
 # END_KITTY_THEME
