--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,24 +2,16 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "builtin",
-    // "source": "~/.config/fastfetch/nix.png",
     "height": 10,
     "padding": {
-      "top": 0
+      "top": 0,
+      "left": 1
     }
   },
   "display": {
-    "separator": "->   ",
+    "separator": ": ",
     "color": {
       "separator": "1" // Bold
-    },
-    "constants": [
-      "────────────────────"
-      // "───────────────────────────"
-    ],
-    "key": {
-      "type": "both",
-      "paddingLeft": 4
     }
   },
   "modules": [
@@ -28,70 +20,66 @@
     "break",
     {
       "type": "custom",
-      "format": "┌{$1} {#1}System Information{#} {$1}┐"
+      "format": "System Information"
     },
     "break",
     {
-      "key": "OS           ",
-      "keyColor": "#f5c2e7",
+      "key": "OS",
+      "keyColor": "#689d6a",
       "type": "os"
     },
     {
-      "key": "Kernel       ",
-      "keyColor": "#cba6f7",
+      "key": "Kernel",
+      "keyColor": "#98971a",
       "type": "kernel"
     },
     {
-      "key": "Uptime       ",
-      "keyColor": "#eba0ac",
+      "key": "Uptime",
+      "keyColor": "#d79921",
       "type": "uptime"
     },
     {
-      "key": "Packages     ",
-      "keyColor": "#fab387",
+      "key": "Packages",
+      "keyColor": "#d65d0e",
       "type": "packages"
     },
     {
-      "key": "WM           ",
-      "keyColor": "#f9e2af",
+      "key": "WM",
+      "keyColor": "#af3a03",
       "type": "wm"
     },
     {
-      "key": "DE           ",
-      "keyColor": "#f9e2af",
+      "key": "DE",
+      "keyColor": "#af3a03",
       "type": "de"
     },
     {
-      "key": "Shell        ",
-      "keyColor": "#a6e3a1",
+      "key": "Shell",
+      "keyColor": "#af3a03",
       "type": "shell"
     },
     {
-      "key": "Terminal     ",
-      "keyColor": "#94e2d5",
+      "key": "Terminal",
+      "keyColor": "#d65d0e",
       "type": "terminal"
     },
     {
-      "key": "CPU          ",
-      "keyColor": "#89dceb",
+      "key": "CPU",
+      "keyColor": "#d79921",
       "type": "cpu"
     },
     {
-      "key": "GPU          ",
-      "keyColor": "#74c7ec",
+      "key": "GPU",
+      "keyColor": "#98971a",
       "type": "gpu",
       "hideType": "integrated",
       "format": "{vendor} {name}"
     },
     {
-      "key": "Memory       ",
-      "keyColor": "#b4befe",
+      "key": "Memory",
+      "keyColor": "#689d6a",
       "type": "memory"
     },
-    "break",
-    {
-      "type": "custom",
-      "format": "└{$1}────────────────────{$1}┘"
-    }
+    "break"
   ]
 }
