--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,8 +12,9 @@ set $right l
 # Your preferred terminal emulator
 set $term foot
 # Your preferred application launcher
-set $menu wmenu-run -f 'JetBrainsMono nerd Font 12' -l 10
+set $menu wmenu-run -i -f 'JetBrainsMono nerd Font 12' -l 10 -p 'Run' -S 282828 -s d79921 -N 504945E6 -n ebdbb2 -M d79921 -m 282828
 
+        #focused_workspace #ebdbb2 #ebdbb2 #282828
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
@@ -212,13 +213,13 @@ bindsym $mod+r mode "resize"
     bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
     bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
     # Special key to take a screenshot with grim
-    bindsym Print exec grim
+    bindsym Print exec sh ~/scripts/snap.sh
 
 #
 # Style Chnages
 #
     font pango:JetBrainsMono Nerd Font Mono,Font Awesome 10
-    client.focused #504945 #ebdbb2 #282828 #d79921 #ebdbb2
+    client.focused #504945 #3c3836 #ebdbb2 #d79921 #ebdbb2
     client.unfocused #504945 #504945 #ebdbb2
 
     #default_border normal 3
