--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,19 +2,19 @@
   "reload_style_on_change": true,
   "layer": "top",
   "position": "top",
-  "height": 40,
+  "height": 30,
   //"width": 1280,
   "spacing": 16,
   // Choose the order of the modules
   "modules-left": [
-    "sway/workspaces"
+    "sway/workspaces",
+    "tray"
   ],
   "modules-center": [
     "sway/window"
     // "cava"
   ],
   "modules-right": [
-    "tray",
     "sway/language",
     "cpu",
     "memory",
@@ -34,29 +34,8 @@
   "sway/workspaces": {
     "all-outputs": false,
     "format": "{icon}",
-    // "format-icons": {
-    //   "active": "󰝥",
-    //   "default": "󰝦"
-    //   // "1": "1",
-    //   // "2": "2",
-    //   // "3": "3",
-    //   // "4": "4",
-    //   // "5": "5",
-    // },
     "persistent-only": false,
     "active-only": true
-    // "persistent-workspaces": {
-    //      "1": [],
-    //      "2": [],
-    //      "3": [],
-    //      "4": [],
-    //      "5": [],
-    //      "6": [],
-    //      "7": [],
-    //      "8": [],
-    //      "9": [],
-    //      "10": []
-    // }
   },
   "mpd": {
     "port": 6600,
