--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,58 +23,6 @@ exec_always --no-startup-id ~/dotfiles/scripts/polybar.sh
 exec_always --no-startup-id xset s off -dpms
 exec_always --no-startup-id feh --bg-fill ~/wallpapers/girl-2.png
 
-# ### Output configuration
-# #
-# # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-# # output * bg /home/goaty/wallpapers/initial-d-trueno-anime-police-girl-8k-eg.jpg fill
-#
-# output DP-3 mode 1920x1080@144Hz position 1920 0
-# output HDMI-A-1 mode 1920x1080@75Hz position 0 0
-
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-# ### Input configuration
-# #
-# # Example configuration:
-# #
-#   input type:touchpad {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-#   input type:keyboard {
-#       xkb_layout "us,se"
-#       xkb_options "grp:win_space_toggle"
-#   }
-#
-#   input type:keyboard repeat_delay 200
-#   input type:keyboard repeat_rate 35
-
-# You can also configure each device individually.
-# Read `man 5 sway-input` for more information about this section.
-
-# workspace 1:1 output DisplayPort-2
-# workspace 2:1 output HDMI-A-0
 
 ### Key bindings
 #
@@ -105,10 +53,12 @@ exec_always --no-startup-id feh --bg-fill ~/wallpapers/girl-2.png
     # Reload the configuration file
     bindsym $mod+Shift+r reload
 
-    # Exit sway (logs you out of your Wayland session)
+    # Reload polybar
+    bindsym $mod+Shift+b exec ~/dotfiles/scripts/polybar.sh
+
+    # Exit sway (logs you out of your xorg session)
     bindsym $mod+Shift+e exit
 
-    # bindsym Ctrl+Alt+Backspace exec wlogout
 #
 # Moving around:
 #
