--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -54,7 +54,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono Nerd Font Mono:size=10;2
 
 modules-left = xworkspaces xwindow
-modules-right = systray filesystem pulseaudio xkeyboard memory cpu date
+modules-right = systray filesystem pulseaudio xkeyboard memory cpu battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -85,7 +85,8 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
+label-active-background = ${colors.primary}
+label-active-foreground = #fbf1c7
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
@@ -103,6 +104,7 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
+label-empty = i3
 
 [module/filesystem]
 type = internal/fs
@@ -110,7 +112,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#b57614}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -144,7 +146,7 @@ type = internal/memory
 interval = 2
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+label = %gb_used%
 
 [module/cpu]
 type = internal/cpu
@@ -174,6 +176,23 @@ date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/battery]
+type = internal/battery
+
+full-at = 80
+
+battery = BAT0
+adapter = AC
+
+format-charging = <ramp-capacity> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
 [settings]
 screenchange-reload = true
